--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -15,4 +15,11 @@
     margin: 0;
     padding: 2rem;
     text-decoration: none;
+    &:hover {
+        background-color: $main-green;
+        color: white;
+    }
+}
+.header__menu-icon {
+    color: $main-grey;
 }
