--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -3,7 +3,15 @@
     justify-content: space-between;
     flex-direction: row !important;
     height: auto;
+    transition: background-color 0.5s ease;
 }
+
+.header__app-bar-small {
+    background-color: green;
+    transition: background-color 0.5s ease;
+
+}
+
 .header__nav-group {
     display: flex;
 }
@@ -21,5 +29,5 @@
     }
 }
 .header__menu-icon {
-    color: $main-grey;
+    background-color: $main-grey;
 }
