Add about me section

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,4 +5,5 @@
 @import './components/jumbotron';
 @import './components/toggle-button';
 @import './components/backdrop';
+@import './components/about-me';
 
