--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -37,7 +37,7 @@
     margin: 0;
     padding: 2rem;
     text-decoration: none;
-    width: 100%;
+    width: 120px;
     &:hover {
         background-color: $main-green;
         color: white;
