--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,3 +1,4 @@
+
 * {
     box-sizing: border-box;
     // border: 1px solid red;
@@ -14,6 +15,10 @@ body {
     height: 100%;
 }
 
+h2 {
+    text-align: center;
+}
+
 .is-avtive {
     color: white !important;
     background-color: $main-red;
@@ -24,6 +29,22 @@ body {
 }
 
 .container {
-    width: 1170px;
     margin: 0 auto;
+    padding: 20px;
+    width: 1170px;
+}
+
+.hr--separator {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border: 0;
+    border-top: 1px solid $light-grey;
+    width: 30%;
+}
+
+
+@media (max-width: 767px){ 	
+	.container {
+		width: 100%;
+    }
 }
