--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -42,6 +42,14 @@ h2 {
     width: 30%;
 }
 
+.hr--sections-separator {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border: 0;
+    border-top: 1px solid $main-green;
+    width: 100%;
+}
+
 
 @media (max-width: 767px){ 	
 	.container {
