--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,9 +1,12 @@
 @import './base/settings';
 @import './base/base';
+@import './base/grid';
 @import './components/header';
 @import './components/sideDrawer';
 @import './components/jumbotron';
 @import './components/toggle-button';
 @import './components/backdrop';
 @import './components/about-me';
+
+@import './components/contact-me';
 
