Add styles to portfolio sections

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
+
 @import './base/settings';
 @import './base/base';
 @import './base/grid';
@@ -7,6 +9,6 @@
 @import './components/toggle-button';
 @import './components/backdrop';
 @import './components/about-me';
-
+@import './components/portfolio';
 @import './components/contact-me';
 
