--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -10,13 +10,38 @@ html {
 }
 
 body {
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: 'Lato', sans-serif;
+    // font-family: Helvetica, Arial, sans-serif;
     font-size: 1.6rem;
     height: 100%;
 }
 
-h2 {
+h2, h3 {
     text-align: center;
+}
+
+.button {
+    text-align: center;
+    display: inline-block;
+    padding: 5px 20px;
+    border-radius: 5px;
+    color: white;
+    text-decoration: none;
+    font-size: 1.2rem;
+}
+
+.button--green {
+    background-color: $main-green;
+    &:hover {
+        background-color: darken($main-green, $amount: 10);
+    }
+}
+
+.button--red {
+    background-color: $main-red;
+    &:hover {
+        background-color: darken($main-red, $amount: 10);
+    }
 }
 
 .is-avtive {
@@ -31,7 +56,7 @@ h2 {
 .container {
     margin: 0 auto;
     padding: 20px;
-    width: 1170px;
+    width: 920px;
 }
 
 .hr--separator {
