Add contact form and some validation. needs improvement

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,4 +11,5 @@
 @import './components/about-me';
 @import './components/portfolio';
 @import './components/contact-me';
+@import './components/contact-form'
 
