--- a/src/styles/components/contact-form.scss
+++ b/src/styles/components/contact-form.scss
@@ -27,4 +27,10 @@
         padding: 10px 0;
         cursor: pointer;
     }
+    .error-message {
+      color: darken($main-red, 10%);
+      color: $main-red;
+      font-size: 0.9em;
+      list-style-type: none;
+    }
 }
