Add smooth scroling

--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -32,6 +32,7 @@
     // background-color: $main-red;
     align-items: center;
     color: $main-grey;
+    cursor: pointer;
     display: flex;
     justify-content: center;
     margin: 0;
