Modyfy webpack configig file

--- a/src/styles/components/sideDrawer.scss
+++ b/src/styles/components/sideDrawer.scss
@@ -24,6 +24,7 @@
             color: $main-grey;
             margin: 0.5rem;
             padding: 2rem;
+            width: 150px;
             &:hover {
                 background-color: $main-green;
             } 
