--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -19,6 +19,11 @@ h2, h3 {
     text-align: center;
 }
 
+h2 {
+    font-size: 2.5rem;
+    font-weight: normal;
+}
+
 .button {
     text-align: center;
     display: inline-block;
