--- a/src/styles/components/contact-form.scss
+++ b/src/styles/components/contact-form.scss
@@ -33,4 +33,8 @@
       font-size: 0.9em;
       list-style-type: none;
     }
+    .message-success {
+      color: $main-green;
+      font-size: 1.2em;
+    }
 }
