--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,5 +10,6 @@
 @import './components/about-me';
 @import './components/portfolio';
 @import './components/contact-me';
-@import './components/contact-form'
+@import './components/contact-form';
+@import './components/gallery';
 
